--- a/Webgunea/Html/erreserbak.html
+++ b/Webgunea/Html/erreserbak.html
@@ -19,10 +19,10 @@
     <nav id="menua">
         <ul>
             <li><img src="../IMG/logo1.png" alt="ElorrietaZinema logo"></li>
-            <li><a href="../Html/main.html">Home</a></li>
-            <li><a href="../Html/karteldegia.html">Karteldegia</a></li>
-            <li><a href="../Html/erreserbak.html">Erreserbak</a></li>
-            <li><a href="../Html/login.php">Log-In</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="karteldegia.html">Karteldegia</a></li>
+            <li><a href="erreserbak.html">Erreserbak</a></li>
+            <li><a href="login.php">Log-In</a></li>
         </ul>
     </nav>
 
