--- a/Webgunea/Html/karteldegia.html
+++ b/Webgunea/Html/karteldegia.html
@@ -17,10 +17,10 @@
          <nav id="menua"> <!-- Nabegazio Barra -->
             <ul>
                 <li><img src="../IMG/logo1.png" alt="ElorrietaZinema logo"></li>
-                <li><a href="main.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li id="ikusita"><a href="karteldegia.html">Karteldegia</a></li>
                 <li><a href="erreserbak.html">Erreserbak</a></li>
-                <li><a href="../Html/login.php">Log-In</a></li>
+                <li><a href="login.php">Log-In</a></li>
             </ul>
         </nav>
        <main>  
