--- a/Webgunea/Html/main.html
+++ b/Webgunea/Html/main.html
@@ -8,8 +8,8 @@
     <meta name="author" content="FloppyClub">
     <meta name="description" content="Elorrieta zinemaren webgunea. Hurrengo HTMLa FloppyClub egin du.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/index.css">
+    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../Css/main.css">
     <!-- Nunito letra mota -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
 </head>
@@ -18,11 +18,11 @@
         <!-- Headerra eta bere nav barruan kategoriekin -->
         <nav id="menua">
             <ul>
-                <li><img src="IMG/logo1.png" alt="ElorrietaZinema logo"></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Html/karteldegia.html">Karteldegia</a></li>
-                <li><a href="Html/erreserbak.html">Erreserbak</a></li>
-                <li><a href="Html/login.php">Log-in</a></li>
+                <li><img src="../IMG/logo1.png" alt="ElorrietaZinema logo"></li>
+                <li><a href="main.html">Home</a></li>
+                <li><a href="karteldegia.html">Karteldegia</a></li>
+                <li><a href="erreserbak.html">Erreserbak</a></li>
+                <li><a href="login.php">Login</a></li>
             </ul>
         </nav>
         <!-- Gunearen deskriptzioa -->
@@ -44,10 +44,10 @@
                 <h2>Gehien ikusita</h2>
                 <nav id="gehienikusita">
                     <ul>
-                        <li><img id="alien" src="IMG/Alien_el_octavo_pasajero.jpg" alt="Alien"></li>
-                        <li><img id="lebowski" src="IMG/El_gran_Lebowski.jpg" alt="Lebowski"></li>
-                        <li><img id="dollar" src="IMG/Million_Dollar_Baby.jpg" alt="Million Dollar"></li>
-                        <li><img id="handia" src="IMG/Handia.jpg" alt="Handia"></li>
+                        <li><img id="alien" src="../IMG/Alien_el_octavo_pasajero.jpg" alt="Alien"></li>
+                        <li><img id="lebowski" src="../IMG/El_gran_Lebowski.jpg" alt="Lebowski"></li>
+                        <li><img id="dollar" src="../IMG/Million_Dollar_Baby.jpg" alt="Million Dollar"></li>
+                        <li><img id="handia" src="../IMG/Handia.jpg" alt="Handia"></li>
                     </ul>
                 </nav>
             </section>
@@ -66,9 +66,9 @@
             </div>
             <div>
                 <a href="https://www.instagram.com/" target="_blank"><img class="szicon"
-                        src="IMG/instagram_icon_146245.png" alt="Instagram logo"></a>
+                        src="../IMG/instagram_icon_146245.png" alt="Instagram logo"></a>
                 <a href="https://twitter.com/?lang=es" target="_blank"><img class="szicon" 
-                        src="IMG/X.jpg" alt="X logo"></a>
+                        src="../IMG/X.jpg" alt="X logo"></a>
             </div>
         </footer>
 </body>
